--- a/ASOS.BL/ASOS.BL.csproj
+++ b/ASOS.BL/ASOS.BL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ASOS.DAL\ASOS.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
