--- a/ASOS.APIs/appsettings.json
+++ b/ASOS.APIs/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-LOSHR6E;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +9,6 @@
     }
   },
   "AllowedHosts": "*"
+
+
 }
