--- a/ASOS.BL/ASOS.BL.csproj
+++ b/ASOS.BL/ASOS.BL.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\ASOS.DAL\ASOS.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Managers\Men\" />
+  </ItemGroup>
+
 </Project>
