--- a/ASOS.APIs/appsettings.json
+++ b/ASOS.APIs/appsettings.json
@@ -1,14 +1,14 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=DESKTOP-LOSHR6E;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "Default": "Server=ABDULLAH\\SQLEXPRESS;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
 
-
+    "secretKey": "sfsdsgg_fsjfsdjfk_sdnfsdn_342525235352"
 }
