--- a/ASOS.APIs/appsettings.json
+++ b/ASOS.APIs/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "Default": "Server=ABDULLAH\\SQLEXPRESS;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
-    },
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-LOSHR6E;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
