last updates in men

--- a/ASOS.APIs/appsettings.json
+++ b/ASOS.APIs/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "Default": "Server=ABDULLAH\\SQLEXPRESS;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
+        "Default": "Server=.;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
     },
     "Logging": {
         "LogLevel": {
