Add some feature

--- a/ASOS.APIs/appsettings.json
+++ b/ASOS.APIs/appsettings.json
@@ -2,13 +2,15 @@
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-LOSHR6E;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
   },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
 
-    "secretKey": "sfsdsgg_fsjfsdjfk_sdnfsdn_342525235352"
+  "secretKey": "sfsdsgg_fsjfsdjfk_sdnfsdn_342525235352",
+
+  "ApiBaseUrl": "https://localhost:7023/"
 }
