--- a/ASOS.BL/ASOS.BL.csproj
+++ b/ASOS.BL/ASOS.BL.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Managers\Men\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
 </Project>
