--- a/ASOS.APIs/ASOS.APIs.csproj
+++ b/ASOS.APIs/ASOS.APIs.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\ASOS.BL\ASOS.BL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
