--- a/ASOS.APIs/appsettings.json
+++ b/ASOS.APIs/appsettings.json
@@ -12,5 +12,5 @@
 
   "secretKey": "sfsdsgg_fsjfsdjfk_sdnfsdn_342525235352",
 
-  "ApiBaseUrl": "https://localhost:7023/"
+  "ApiBaseUrl": "https://localhost:7023/Images/"
 }
