--- a/ASOS.BL/ASOS.BL.csproj
+++ b/ASOS.BL/ASOS.BL.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
 
     <PackageReference Include="Stripe.net" Version="48.0.0" />
