Connection String Updated

--- a/ASOS.APIs/appsettings.json
+++ b/ASOS.APIs/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-LOSHR6E;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
+    "Default": "Server=.;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
+    //"Server=DESKTOP-LOSHR6E;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
