--- a/ASOS.APIs/appsettings.json
+++ b/ASOS.APIs/appsettings.json
@@ -1,10 +1,10 @@
 {
-    "ConnectionStrings": {
+  "ConnectionStrings": {
 
-        "Default": "Server=ABDULLAH\\SQLEXPRESS;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
-        //"Server=.;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
+    "Default": "Server=DESKTOP-LOSHR6E;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
+    //"Server=.;Database=AsosDB;TrustServerCertificate=True;Trusted_Connection=True"
 
-    },
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
